# propwise-ai

./: .gitignore  README.md
backend/: Dockerfile  pyproject.toml  requirements.txt  run_tests_with_env.ps1  test_llm_connectivity.py
backend/app/: main.py
backend/app/agents/: graph.py  prompts.py  state.py
backend/app/agents/nodes/: decision.py  explanation.py  financial.py  market.py  parser.py  risk.py
backend/app/api/v1/: routes.py
backend/app/api/v1/endpoints/: property.py
backend/app/core/: settings.py
backend/app/ingestion/: README.md  chunker.py  cleaner.py  deduplicator.py  embedder.py  ingest_bootstrap.py  loader.py  normalizer.py  pipeline.py  preprocess.py  run_ingestion.py  scheduler.py  schema_mapper.py  validators.py
backend/app/integrations/: embedding_client.py  openrouter_client.py  scraper.py
backend/app/schemas/: property.py  property_request.py  property_response.py  property_schema.py
backend/app/services/: financial_service.py  market_service.py  risk_service.py  vector_bootstrap.py
backend/app/vectorstore/: chroma_client.py  ingestion.py  query.py  test_retrieval.py
backend/tests/: test_api_property.py  test_financial_service.py  test_market_service.py  test_parser.py  test_pipeline.py  test_pipeline_mocked.py  test_pipeline_real.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: propertyApi.ts
frontend/src/components/: EmptyState.tsx  HowItWorks.tsx  InvestmentTips.tsx  MetricsGuide.tsx  PropertyForm.tsx
frontend/src/hooks/: usePropertyAnalysis.ts
(+11 files in other folders)
