[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.0",
    "langchain==0.3.25",
    "langchain-core==0.3.58",
    "langgraph==0.2.55",
    "logging>=0.4.9.6",
    "openai>=2.32.0",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
